# AMLGym

./: .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
algorithms/: AlgorithmAdapter.py  NOLAM.py  OffLAM.py  ROSAME.py  SAM.py  __init__.py
aml_evaluation/algorithms/: NOLAM.py  OffLAM.py  ROSAME.py  SAM.py
aml_evaluation/evaluation/: evaluator.py
aml_evaluation/util/: gen_trajs_learning.py  gen_trajs_learning_hard.py  gen_trajs_predictability.py
amlgym/algorithms/: NOLAM.py  OffLAM.py  ROSAME.py  SAM.py
amlgym/algorithms/sam/: requirements.txt
amlgym/benchmarks/: __init__.py
amlgym/evaluation/: evaluator.py
amlgym/util/: gen_trajs_learning.py  gen_trajs_learning_hard.py  gen_trajs_predictability.py
benchmarks/: domains.xlsx  problems.yaml  problems_learning.yaml  trajectories.xlsx
benchmarks/configs/: domains.yaml
benchmarks/domains/: depots.pddl  driverlog.pddl  elevators.pddl  floortile.pddl  grippers.pddl  nomystery.pddl  parking.pddl
benchmarks/problems/barman/: 0_barman_prob.pddl  1_barman_prob.pddl  2_barman_prob.pddl  3_barman_prob.pddl  4_barman_prob.pddl  5_barman_prob.pddl  6_barman_prob.pddl  7_barman_prob.pddl  8_barman_prob.pddl  9_barman_prob.pddl
benchmarks/problems/blocksworld/: 0_blocksworld_prob.pddl  1_blocksworld_prob.pddl  2_blocksworld_prob.pddl  3_blocksworld_prob.pddl  4_blocksworld_prob.pddl  5_blocksworld_prob.pddl  6_blocksworld_prob.pddl  7_blocksworld_prob.pddl  8_blocksworld_prob.pddl  9_blocksworld_prob.pddl
benchmarks/problems/childsnack/: 0_childsnack_prob.pddl  1_childsnack_prob.pddl  2_childsnack_prob.pddl  3_childsnack_prob.pddl  4_childsnack_prob.pddl  5_childsnack_prob.pddl  6_childsnack_prob.pddl  7_childsnack_prob.pddl  8_childsnack_prob.pddl  9_childsnack_prob.pddl
benchmarks/problems/depots/: 0_depots_prob.pddl  1_depots_prob.pddl  2_depots_prob.pddl  3_depots_prob.pddl  4_depots_prob.pddl  5_depots_prob.pddl  6_depots_prob.pddl  7_depots_prob.pddl  8_depots_prob.pddl  9_depots_prob.pddl
benchmarks/problems/driverlog/: 0_driverlog_prob.pddl  1_driverlog_prob.pddl  (+8 more)
benchmarks/stats/: barman.xlsx  blocksworld.xlsx  depots.xlsx  driverlog.xlsx  ferry.xlsx
docs/: requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst
evaluation/: evaluator.py
modeling/: trajectory.py
scripts/: make_distrib.sh  make_doc.sh
util/: SimpleDomainReader.py  benchmark_stats.py  comments.py  gen_problems.py  gen_probs_solving.py  gen_stats.py  gen_trajs_learning.py  gen_trajs_learning_hard.py  gen_trajs_predictability.py  generators.py  res_stats.py  stats.py  stats_gen.py  stats_res.py  util.py
(+5751 files in other folders)
